syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

option java_multiple_files = true;
option java_package = "io.openk9.datasource.grpc";
option java_outer_classname = "DocTypeFieldProto";

package docTypeField;

enum FieldType {
  NULL = 0;
  BINARY = 1;
  BOOLEAN = 2;
  KEYWORD = 3;
  CONSTANT_KEYWORD = 4;
  WILDCARD = 5;
  DATE = 6;
  DATE_NANOS = 7;
  LONG = 8;
  INTEGER = 9;
  SHORT = 10;
  BYTE = 11;
  DOUBLE = 12;
  FLOAT = 13;
  HALF_FLOAT = 14;
  SCALED_FLOAT = 15;
  UNSIGNED_LONG = 16;
  OBJECT = 17;
  FLATTENED = 18;
  NESTED = 19;
  JOIN = 20;
  LONG_RANGE = 21;
  DOUBLE_RANGE = 22;
  DATE_RANGE = 23;
  IP_RANGE = 24;
  IP = 25;
  VERSION = 26;
  MURMUR3 = 27;
  HISTOGRAM = 28;
  TEXT = 29;
  ANNOTATED_TEXT = 30;
  COMPLETION = 31;
  SEARCH_AS_YOU_TYPE = 32;
  TOKEN_COUNT = 33;
  DENSE_VECTOR = 34;
  SPARSE_VECTOR = 35;
  RANK_FEATURE = 36;
  RANK_FEATURES = 37;
  GEO_POINT = 38;
  GEO_SHAPE = 39;
  POINT = 40;
  SHAPE = 41;
  PERCOLATOR = 42;
}

message DocTypeFieldRequest {
  string name = 1;
  string description = 2;
  bool searchable = 3;
  double boost = 4;
  FieldType type = 5;
}

message DocTypeFieldList {
  repeated DocTypeField response = 1;
}

message DocTypeField {
  int64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp createDate = 4;
  google.protobuf.Timestamp modifiedDate = 5;
  bool searchable = 6;
  double boost = 7;
  FieldType type = 8;
}